# scopemux-core

./: .backup-windsurfrules  .clangd  .gitignore  .gitmodules  .python-version  .remarkrc.js  .uml_config.yaml  .windsurfrules  08-02-2024_Notes.md  CMakeLists.txt  PARALLEL_TEST_RUNNER.md  README.md  TODO.md  actual_hello_world_ast.json  api_refactor_notes.md  api_refactor_notes_og.md  api_refactor_todo.md  cmake-contents.txt  compare_ast_to_expected.sh  conversation_log.md  debug_parser.py  debug_parser_enhanced.py  diff_json_ast.sh  direct_test.c  docstring_errors.txt  dump_c_cst.py  example_ast_output.txt  facade_references.txt  find_python_headers.sh  fix_parser_clear.c  generate_ast_json.sh  next-thing-up.md  run_all_lang_tests.sh  run_all_lang_tests_simple.sh  run_c_bindings_tests.sh  run_c_tests.sh  run_c_tests.txt  run_cpp_tests.sh  run_cpp_tests.txt  run_interfile_tests.sh  (+22 more)
bindings/tests/: CMakeLists.txt
bindings/tests/expected_output/python/: example1.py.expected.json
bindings/tests/src/: c_parser_tests.c
bindings/tests/utilities/: test_utils.c  test_utils.h
core/: CMakeLists.txt  cst.txt  main.c  parse_cst  setup.py
core/config/: node_type_mapping.json
core/examples/: CMakeLists.txt  README.md
core/include/config/: node_type_mapping_loader.h
core/include/scopemux/: ast.h  ast_compliance.h  common.h  context_engine.h  crash_handler.h  lang_compliance.h  language.h  logging.h  memory_debug.h  memory_management.h  parser.h  project_context.h  python_bindings.h  python_utils.h  query_manager.h  reference_resolver.h  reference_resolver_internal.h  source_range.h  symbol.h  symbol_collection.h  symbol_management.h  symbol_registration.h  symbol_table.h  tree_sitter_integration.h  tree_sitter_parser.h  tree_sitter_stubs.h  ts_internal.h  ts_parser_interface.h  ts_resource_manager.h
core/include/scopemux/adapters/: adapter_registry.h  language_adapter.h
core/include/scopemux/config/: node_type_mapping_loader.h
core/include/scopemux/processors/: ast_post_processor.h  docstring_processor.h  test_processor.h
core/include/tree_sitter/: api.h
core/parser_testing/: README.md  __init__.py  cli.py
core/parser_testing/converters/: __init__.py  ast_converter.py  base_converter.py  cst_converter.py
core/parser_testing/generators/: __init__.py  json_generator.py
core/parser_testing/languages/: __init__.py  base.py  cpp_adapter.py  python_adapter.py
core/parser_testing/utils/: __init__.py  diff_utils.py  file_utils.py  memory_utils.py
core/scripts/: dump_c_cst.py
core/src/: ast.c  ast_compliance.c  lang_compliance.c
core/src/adapters/: CMakeLists.txt  adapter_registry.c  language_adapter.c
core/src/bindings/: context_engine_bindings.c  context_engine_bindings.h  module.c  parser_bindings.c  parser_bindings.h  signal_handler.c  test_processor_bindings.c  test_processor_bindings.h  tree_sitter_bindings.c
core/src/common/: error_handling.c  language.c  logging.c  memory_management.c
core/src/config/: CMakeLists.txt  node_type_mapping_loader.c
core/src/context_engine/: compressor.c  context_engine.c  expander.c  token_budgeter.c
core/src/parser/: ast_compliance.c  ast_node.c  ast_node.h  ast_properties.c  cst_node.c  cst_node.h  ir_generator.c  memory_tracking.c  memory_tracking.h  parse_ast.c  parse_cst.c  parser.c  parser.h  parser_context.c  parser_context.h  parser_context_utils.c  parser_internal.h  project_context.c  query_manager.c  query_processing.c  query_processing.h  reference_resolver.c  symbol_table.c  tree_sitter_integration.c  tree_sitter_parser.c  ts_ast_builder.c  ts_cst_builder.c  ts_diagnostic.c  ts_init.c  ts_query_processor.c
core/src/parser/lang/: c_ast_compliance.c  c_compliance.c  javascript_ast_compliance.c  lang_compliance.c  lang_compliance_registry.c  python_ast_compliance.c  typescript_ast_compliance.c
core/src/parser/project_context/: dependency_management.c  dependency_management.h  file_management.c  file_management.h  project_context_facade.c  project_context_internal.h  project_core.c  project_symbol_extraction.c  project_utils.c  project_utils.h  symbol_collection.c  symbol_management.c  symbol_registration.c
core/src/parser/reference_resolvers/: c_cpp_resolver_shared_utils.c  c_cpp_resolver_shared_utils.h  c_resolver.c  cpp_resolver.c  javascript_resolver.c  js_ts_resolver_shared_utils.c  js_ts_resolver_shared_utils.h  language_resolvers.c  language_resolvers.h  python_resolver.c  reference_resolver_core.c  reference_resolver_facade.c  reference_resolver_internal.h  resolver_core.c  resolver_implementation.c  (+3 more)
core/src/processors/: ast_post_processor.c  docstring_processor.c  test_processor.c  test_processor_include.c
core/src/utils/: crash_handler.c  memory_debug.c  ts_resource_manager.c
core/tests/: CMakeLists.txt  README.md  language_resolver_tests.c  project_context_tests.c  reference_resolver_tests.c  resolver_core_tests.c  resolver_registration_tests.c  resolver_resolution_tests.c  symbol_new_minimal_test.c  symbol_table_tests.c  test_compiler_flags.h  test_memory_debug.c
core/tests/include/: ast_test_utils.h  json_validation.h  minimal_parser.h  symbol_test_helpers.h  test_helpers.h
core/tests/language_resolver/: language_resolver_tests.c
core/tests/project_context/: project_context_tests.c
core/tests/python/: __init__.py  test_language_detection.py
core/tests/reference_resolvers/: language_resolver_tests.c  parser_context_stubs.c  project_context_stubs.c  project_context_test_stubs.c  reference_resolver_globals.c  reference_resolver_private.h  reference_resolver_project_context_stubs.c  reference_resolver_stubs.c  resolver_core_tests.c  resolver_registration_tests.c  resolver_resolution_tests.c  resolver_test_adapter.c  symbol_test_helpers.c
core/tests/src/: ast_extraction_tests.c  c_parser_tests.c  edge_case_tests.c  init_parser_tests.c
core/tests/symbol_table/: symbol_table_tests.c
core/tests/tools/: debug_parser.py  debug_parser_segfault.py  generate_expected_json.py  list_module_functions.py
core/tests/utilities/: tree_sitter_test_util.c  tree_sitter_test_util.h
(+180 files in other folders)
